refactor: enhance validation and error handling in controllers